# veille2023TP2

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.md
crates/bsp-testing/: Cargo.toml  LEARNTHISSHIT.MD
crates/game/: Cargo.toml
crates/game/src/: main.rs
journal/baie-st-paul/: init.md
journal/cidit/: 2023-10-06.md  2023-10-12.md  2023-10-13.md  2023-10-16.md
