[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_rapier2d = "0.22.0"

[dependencies.bevy_rapier_collider_gen]
git = "https://github.com/shnewto/bevy_rapier_collider_gen.git"
commit = "cca4d5b"

